--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,11 @@ h1 {
   font-size: 48px;
   font-weight: extra-bold;
   color: #F9FAF8;
+  margin: 20px 0 0 0;
+}
+
+h2 {
+  font-size: 35px;
   margin: 0;
 }
 
@@ -80,17 +85,33 @@ button {
   color: #1F2937;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
+  padding-top: 40px;
+  height: 40vh;
 }
 
 .wrapper {
   display: flex;
+  margin: 40px auto;
+  gap: 60px;
 }
 
 .flex-container {
   display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  width: 150px;
 }
+
+.flex-container div {
+  border: 3px solid #3882F6;
+  width: 100%;
+  height: 150px;
+  border-radius: 15px;
+}
+
+.flex-container p {}
 
 .third-section {
   background-color: #E5E7EB;
