--- a/styles.css
+++ b/styles.css
@@ -111,10 +111,30 @@ button {
   border-radius: 15px;
 }
 
-.flex-container p {}
-
 .third-section {
   background-color: #E5E7EB;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: black;
+}
+
+.quote-container {
+  width: 50vw;
+}
+
+.quote {
+  font-size: 36px;
+  font-style: italic;
+  color: #1F2937;
+  margin: 0 0 0 25px;
+}
+
+.name {
+  text-align: end;
+  margin: 0 20px 0 0;
+  font-weight: bold;
+  font-size: 25px;
 }
 
 .first-section header {
