--- a/styles.css
+++ b/styles.css
@@ -16,10 +16,6 @@ main {
   margin: 0;
 }
 
-section {
-  height: 50vh;
-}
-
 h1 {
   font-size: 48px;
   font-weight: extra-bold;
@@ -46,6 +42,15 @@ button {
   margin: 10px 0;
 }
 
+ul {
+  display: flex;
+  gap: 20px;
+}
+
+li {
+  list-style: none;
+}
+
 .hero p {
   font-size: 18px;
   color: #E5E7EB;
@@ -56,7 +61,13 @@ button {
   background-color: #1F2937;
   display: flex;
   flex-direction: column;
-  padding: 0 15vw;
+  padding: 0 12vw;
+  height: 60vh;
+}
+
+.first-section header {
+  display: flex;
+  justify-content: space-between;
 }
 
 .hero {
@@ -117,6 +128,7 @@ button {
   justify-content: center;
   align-items: center;
   color: black;
+  height: 40vh;
 }
 
 .quote-container {
@@ -137,16 +149,50 @@ button {
   font-size: 25px;
 }
 
-.first-section header {
+.fourth-section {
+  background-color: white;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
+  align-items: center;
+  height: 40vh;
 }
 
-ul {
+.action {
+  background-color: #3882F6;
+  width: 55%;
+  height: 100px;
+  border-radius: 7px;
+  padding: 20px 110px;
   display: flex;
-  gap: 20px;
+  align-items: center;
 }
 
-li {
-  list-style: none;
+.action-container {
+  flex: 1;
+}
+
+.action button {
+  border: 1px solid white;
+  padding: 7px 30px;
+}
+
+.action h4,
+.action p {
+  margin: 5px 0;
+}
+
+.action h4 {
+  font-size: 20px;
+}
+
+.action p {
+  color: #E5E7EB;
+}
+
+footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #1F2937;
+  padding: 20px 0;
 }
